# encrypted-zone-node

./: .bazelignore  .bazelrc  .codespellrc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .versionrc.json  BUILD.bazel  CHANGELOG.md  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  buf.yaml  build_flavors.bzl  devkit.json
.devkit/: CHANGELOG.md
.gemini/: settings.json
coverage/: thresholds.json
docs/: CommitMsgHook.md  DevKit.md  Development.md  Mcp.md  (+6 more)
enforcer/: BUILD.bazel  buf.yaml  ez_manifest.proto  main.rs
enforcer/benches/: BUILD.bazel  GEMINI.md  main.rs
enforcer/benches/benchmarks/: benchmark_data_scope.rs  benchmark_example_addition.rs  benchmark_example_sleep.rs  benchmark_trace_context.rs  mod.rs
enforcer/benches/manifests/: ez_benchmark_manifest.json
enforcer/console_helper/: BUILD.bazel  buf.yaml  console_helper.proto
enforcer/console_helper/src/: lib.rs
enforcer/console_helper/test/: console_helper_test.rs
enforcer/container/: BUILD.bazel  test_utils.rs
enforcer/container/manager/: BUILD.bazel
enforcer/container/manager/src/: manager.rs  manifest_parser.rs  request.rs  requester.rs
enforcer/container/manager/test/: container_manager_tests.rs  manifest_parser_test.rs
enforcer/container/manager/test/testdata/: test_manifest.json  test_manifest.txtpb  test_manifest_interceptor.json  test_manifest_multiple_isolates.json  test_manifest_one_isolate.json  test_manifest_otel.json  test_manifest_ratified_isolate.json  test_manifest_wrong_domain.json
enforcer/container/src/: container.rs  container_custom.rs  utils.rs
enforcer/container/test/: container_custom_test.rs
enforcer/container/test_data/: BUILD.bazel  main.rs
enforcer/data_scope/: BUILD.bazel
enforcer/data_scope/src/: data_scope_manager.rs  data_scope_validator.rs  error.rs  lib.rs  manifest_validator.rs  ratified_isolate_manager.rs  request.rs  requester.rs
enforcer/data_scope/test/: error_test.rs  manager_test.rs  validator_test.rs
enforcer/diagnostics/: BUILD.bazel
enforcer/diagnostics/src/: lib.rs  pprof.rs  tokio_service.rs
enforcer/diagnostics/test/: diagnostics_tests.rs
enforcer/diagnostics/v1/: BUILD.bazel  diagnostics_service.proto
enforcer/error/: BUILD.bazel
enforcer/error/src/: ez_error.rs  trait.rs
enforcer/error/test/: ez_error_test.rs
enforcer/ez_to_external/: BUILD.bazel
enforcer/ez_to_external/src/: constants.rs  external_proxy_connector.rs  lib.rs  types.rs
enforcer/ez_to_external/test/: external_proxy_connector_metrics_test.rs  external_proxy_connector_test.rs
enforcer/ez_to_ez/: BUILD.bazel  outbound_ez_to_ez_client.rs
enforcer/ez_to_ez/src/: inbound.rs  mtls.rs  mtls_lib.rs  outbound.rs
enforcer/ez_to_ez/test/: README.md  inbound_test.rs  metrics_test.rs  mtls_test.rs  outbound_metrics_test.rs  outbound_test.rs
enforcer/ez_to_ez/test/testdata/: leaf.csr  leaf.der  leaf.key  root.der  root.key  verify_test_certs.sh
enforcer/grpc_connector/: BUILD.bazel
enforcer/grpc_connector/src/: util.rs
enforcer/grpc_connector/test/: util_test.rs
enforcer/health/: BUILD.bazel
enforcer/health/src/: health_manager.rs  health_ops.rs  system_metrics.rs
enforcer/health/test/: health_manager_metrics_test.rs  health_manager_tests.rs
enforcer/integration_test/: BUILD.bazel  container_integration_test.rs
enforcer/interceptor/: BUILD.bazel
enforcer/interceptor/src/: lib.rs
enforcer/interceptor/test/: interceptor_test.rs
enforcer/isolate/: BUILD.bazel  test_utils.rs
enforcer/isolate/src/: fileshare_manager.rs  isolate_ez_service.rs  isolate_ez_service_manager.rs  isolate_info.rs  isolate_service_mapper.rs  shared_mem_manager.rs  shm_slab_pool.rs
enforcer/isolate/test/: fileshare_test.rs  isolate_ez_service_metrics_test.rs  isolate_ez_service_test.rs  isolate_service_mapper_test.rs  shm_slab_pool_test.rs
enforcer/junction/: BUILD.bazel  test_utils.rs  trait.rs
enforcer/junction/src/: error.rs  lib.rs
enforcer/junction/test/: junction_test.rs
enforcer/logging/: BUILD.bazel
enforcer/logging/src/: lib.rs
enforcer/metrics/: BUILD.bazel
enforcer/metrics/src/: common.rs  data_scope.rs  external_proxy_connector.rs  ez_to_ez_inbound.rs  ez_to_ez_outbound.rs  global.rs  health_manager.rs  isolate_ez_service.rs  junction.rs  lib.rs  observed_proxy_channel.rs  observed_stream.rs  outbound.rs  public_api.rs  receiver.rs
enforcer/metrics/test/: isolate_metrics_receiver_test.rs  metrics_simulator_test.bzl  metrics_test.rs  receiver_test.rs  test_utils.rs
enforcer/metrics/test_data/: test_manifest_missing_binary.json
enforcer/metrics/test_data/baseline/: expected_output.json  manifest.json  metrics_input.json
enforcer/metrics/test_data/histogram/: expected_output.json  manifest.json  metrics_input.json
enforcer/metrics/test_data/missing_policy/: expected_output.json  manifest.json  metrics_input.json
enforcer/metrics/tools/: README.md  metrics_simulator.rs
enforcer/proto/: BUILD.bazel
enforcer/public_api/: BUILD.bazel
enforcer/public_api/src/: interceptor.rs  lib.rs
enforcer/public_api/test/: public_api_metrics_test.rs  public_api_tests.rs
enforcer/state/: BUILD.bazel
enforcer/state/src/: isolate_state_manager.rs
enforcer/state/test/: isolate_state_manager_test.rs
enforcer/trace_context/: BUILD.bazel
enforcer/trace_context/src/: lib.rs
enforcer/trace_context/test/: trace_context_test.rs
enforcer/traces/: BUILD.bazel
enforcer/traces/src/: lib.rs
enforcer/traces/test/: console_subscriber_conflict_test.rs  console_subscriber_test.rs  traces_test.rs  traces_uds_test.rs
enforcer/v1/: BUILD.bazel  error_detail.proto  ez_data_scope.proto  ez_external_proxy_service.proto  ez_isolate_bridge.proto  ez_manifest.proto  ez_mtls.proto  ez_payload.proto  ez_service.proto  ez_to_ez_service.proto  isolate_bridge.proto  isolate_data_scope.proto  isolate_ez_bridge.proto  isolate_health.proto  options.proto
enforcer/version/: BUILD.bazel
enforcer/version/src/: lib.rs
tools/mcp/server/: BUILD.bazel  ez-build-fix.toml  server.rs  update_mcp_server
tools/mcp/server/src/: build_service.rs
(+15 files in other folders)
