# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary")

filegroup(
    name = "manifests",
    srcs = glob([
        "manifests/*_manifest.json",
    ]),
)

rust_binary(
    name = "enforcer_bench",
    srcs = glob(["benchmarks/*.rs"]) + ["main.rs"],
    data = [
        ":manifests",
        "//enforcer/proto:test_manifest_descriptor_set",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer:manifest_rust",
        "//enforcer/container/manager:manifest_parser",
        "//enforcer/data_scope",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:data_scope_rust",
        "@crates//:anyhow",
        "@crates//:criterion",
        "@crates//:rand",
        "@crates//:tokio",
    ],
)
