# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "console_helper_proto",
    srcs = ["console_helper.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

buf_lint_test(
    name = "console_helper_lint",
    size = "small",
    config = ":buf.yaml",
    targets = [":console_helper_proto"],
)

rust_prost_library(
    name = "console_helper_rust_proto",
    proto = ":console_helper_proto",
    visibility = ["//visibility:public"],
)

rust_library(
    name = "console_helper",
    srcs = ["src/lib.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":console_helper_rust_proto",
        "@crates//:async-stream",
        "@crates//:console-api",
        "@crates//:futures-core",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "console_helper_test",
    size = "small",
    srcs = ["test/console_helper_test.rs"],
    deps = [
        ":console_helper",
        ":console_helper_rust_proto",
        "//enforcer/traces",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)
