# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "utils",
    srcs = ["src/utils.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:interfaces",
        "@crates//:libc",
        "@crates//:log",
        "@crates//:tar",
        "@crates//:tempfile",
    ],
)

rust_library(
    name = "container",
    srcs = [
        "src/container.rs",
    ],
    proc_macro_deps = ["@crates//:derivative"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:tempfile",
        "@crates//:tonic",
    ],
)

rust_library(
    name = "container_custom",
    srcs = [
        "src/container_custom.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":container",
        ":utils",
        "@crates//:anyhow",
        "@crates//:libc",
        "@crates//:log",
        "@crates//:nix",
        "@crates//:oci-spec",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tonic",
        "@crates//:users",
        "@crates//:which",
    ],
)

rust_test(
    name = "container_custom_test",
    size = "small",
    srcs = ["test/container_custom_test.rs"],
    data = ["//enforcer/container/test_data:test_bundle"],
    tags = ["require_privileged"],
    deps = [
        ":container",
        ":container_custom",
        ":utils",
        "@crates//:anyhow",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)

rust_library(
    name = "container_test_utils",
    testonly = True,
    srcs = ["test_utils.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":container",
        "//enforcer/v1:enforcer_rust",
        "@crates//:anyhow",
        "@crates//:dashmap",
        "@crates//:once_cell",
        "@crates//:rand",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)
