# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "data_scope",
    srcs = glob(["src/*.rs"]),
    proc_macro_deps = ["@crates//:derivative"],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/error:ez_error",
        "//enforcer/error:ez_error_trait",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:error_detail_rust",
        "//enforcer/v1:google_rpc_error_details_rust",
        "@crates//:anyhow",
        "@crates//:dashmap",
        "@crates//:indexmap",
        "@crates//:log",
        "@crates//:metrics",
        "@crates//:rand",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "data_scope_test",
    size = "small",
    srcs = ["test/manager_test.rs"],
    deps = [
        ":data_scope",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "@crates//:once_cell",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "validator_test",
    size = "small",
    srcs = ["test/validator_test.rs"],
    deps = [
        ":data_scope",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "error_test",
    size = "small",
    srcs = ["test/error_test.rs"],
    deps = [
        ":data_scope",
        "//enforcer/error:ez_error",
        "//enforcer/error:ez_error_trait",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:error_detail_rust",
        "@crates//:tonic",
    ],
)
