# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "diagnostics",
    srcs = [
        "src/lib.rs",
        "src/pprof.rs",
        "src/tokio_service.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/console_helper",
        "//enforcer/diagnostics/v1:diagnostics_rust",
        "@crates//:anyhow",
        "@crates//:flate2",
        "@crates//:log",
        "@crates//:once_cell",
        "@crates//:pprof",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "diagnostics_unit_test",
    size = "small",
    crate = ":diagnostics",
)

rust_test(
    name = "diagnostics_tests",
    size = "small",
    srcs = ["test/diagnostics_tests.rs"],
    deps = [
        ":diagnostics",
        "//enforcer/console_helper",
        "//enforcer/diagnostics/v1:diagnostics_rust",
        "@crates//:once_cell",
        "@crates//:pprof",
        "@crates//:prost-types",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)
