# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "ez_error",
    srcs = [
        "src/ez_error.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/v1:error_detail_rust",
        "//enforcer/v1:google_rpc_error_details_rust",
        "@crates//:googleapis-tonic-google-rpc",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:thiserror",
        "@crates//:tonic",
    ],
)

rust_library(
    name = "ez_error_trait",
    srcs = ["src/trait.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":ez_error",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "ez_error_test",
    srcs = ["test/ez_error_test.rs"],
    deps = [
        ":ez_error",
        "//enforcer/v1:error_detail_rust",
        "//enforcer/v1:google_rpc_error_details_rust",
        "@crates//:prost",
        "@crates//:tonic",
    ],
)
