# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//enforcer:__subpackages__"])

rust_library(
    name = "external_proxy_connector_constants",
    srcs = ["src/constants.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "external_proxy_connector",
    srcs = [
        "src/external_proxy_connector.rs",
        "src/lib.rs",
        "src/types.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":external_proxy_connector_constants",
        "//enforcer/data_scope",
        "//enforcer/grpc_connector",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:log",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "external_proxy_connector_test",
    size = "small",
    srcs = ["test/external_proxy_connector_test.rs"],
    # Add this line to enforce sequential execution
    # This is important because we use environment variables
    args = ["--test-threads=1"],
    tags = ["test"],
    deps = [
        ":external_proxy_connector",
        "//enforcer/data_scope",
        "//enforcer/grpc_connector",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:rand",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)
